<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.sidecarhealth.sidecarhealth.viewmodel.SidecarViewModel" />
    </data>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_doctor_32"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:contentDescription="@string/doctor_icon"/>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/iv_icon"
                android:text="@string/cardview_title"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardview_description"
                android:layout_below="@+id/tv_title"
                android:layout_toRightOf="@+id/iv_icon"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</layout>