<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mindorks.framework.mvvm.ui.main.MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.sidecarhealth.sidecarhealth.viewmodel.SidecarViewModel" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <!--        <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_weight="1"
                        android:background="?attr/colorPrimary"
                        app:popupTheme="@style/AppTheme.PopupOverlay"
                        app:title="@string/titleBar"
                        android:gravity="center">

                    </android.support.v7.widget.Toolbar>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:background="@color/navy"
                    android:text="@string/titleBar"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textStyle="bold">


                </TextView>
                <TextView
                    android:id="@+id/tv_doctorInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    android:paddingTop="10dp"
                    android:text="@string/doctor_name"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@android:color/white"
                    android:inputType="textCapWords">

                </TextView>
                <TextView
                    android:id="@+id/tv_doctorspeciality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:paddingBottom="6dp"
                    android:text="@string/doctor_speciality"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@android:color/white"
                    android:inputType="textCapWords">

                </TextView>
            </LinearLayout>
            <android.support.design.widget.TabLayout
                android:id="@+id/tablayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBgTabs"
                app:tabIndicatorColor="@color/colorTabIndicator"
                app:tabSelectedTextColor="@color/colorSelectedTab"
                app:tabTextColor="@color/colorFontTab">
                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_overview" />
                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_costs" />

            </android.support.design.widget.TabLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        <!-- No Need based on Spec -->
        <!--    <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@android:drawable/ic_dialog_email" />-->

    </android.support.design.widget.CoordinatorLayout>
</layout>
